--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" style="width:100%; height:100%;">
     <head>
           <meta http-equiv="content-type" content="text/html; charset=utf-8">
-            <title>kekayan's Resume</title>
+            <title>Muhammed's Resume</title>
     </head>
       <body style="width:100%; height:100%; margin:0;">
               <iframe
